--- a/AnimalApp/AnimalApp/appsettings.json
+++ b/AnimalApp/AnimalApp/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=APBD5_2;User Id=sa;Password=AAA"
+    "DefaultConnection": "Server=db-mssql16.pjwstk.edu.pl;Database=s25132;Trusted_Connection=True;"
+
   },
   "AllowedHosts": "*"
 }
